--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,32 +1,32 @@
 * {
-    /* `otf-font-awesome` is required to be installed for icons */
-    font-family: Iosevka, FontAwesome, Roboto, Helvetica, Arial, sans-serif;
-    font-size: 13px;
-    min-height: 0;
+  /* `otf-font-awesome` is required to be installed for icons */
+  font-family: Iosevka, FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+  font-size: 13px;
+  min-height: 0;
 }
 
 window#waybar {
-    background-color: rgba(0, 0, 0, 0);
-    color: #cccccc;
-    transition-property: background-color;
-    transition-duration: .5s;
+  background-color: rgba(0, 0, 0, 0);
+  color: #cccccc;
+  transition-property: background-color;
+  transition-duration: 0.5s;
 }
 
 window#waybar.hidden {
-    opacity: 0.1;
+  opacity: 0.1;
 }
 
 button {
-    /* Use box-shadow instead of border so the text isn't offset */
-    /* box-shadow: inset 0 -3px transparent; */
-    /* Avoid rounded borders under each button name */
-    background-color: transparent;
-    border-radius: 0px;
+  /* Use box-shadow instead of border so the text isn't offset */
+  /* box-shadow: inset 0 -3px transparent; */
+  /* Avoid rounded borders under each button name */
+  background-color: transparent;
+  border-radius: 0px;
 }
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 #workspaces button:hover {
-  border-color: rgba(0,0,0,0);
+  border-color: rgba(0, 0, 0, 0);
   box-shadow: none; /* Remove predefined box-shadow */
   text-shadow: none; /* Remove predefined text-shadow */
   background: none; /* Remove predefined background color (white) */
@@ -52,15 +52,15 @@ button {
 }
 
 #workspaces button:hover {
-  background-color: rgba(150,150,150, 0.15);
+  background-color: rgba(150, 150, 150, 0.15);
 }
 
 #workspaces button.active {
-    background-color: rgba(150,150,150,0.2);
+  background-color: rgba(150, 150, 150, 0.2);
 }
 
 #workspaces button.urgent {
-    background-color: #eb4d4b;
+  background-color: #eb4d4b;
 }
 
 #clock,
@@ -75,17 +75,17 @@ button {
 #tray,
 #mode,
 #custom-hyprlock,
+#custom-media,
 #idle_inhibitor {
-	/* border-left-style: solid; */
-	/* border-left-width: 2px; */
-	/* border-left-color: #303030; */
-	padding-left: 10px;
-	padding-right:10px;
+  /* border-left-style: solid; */
+  /* border-left-width: 2px; */
+  /* border-left-color: #303030; */
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 #pulseaudio {
-		/* border-left-style: none; */
-
+  /* border-left-style: none; */
 }
 
 #cpu {
@@ -98,8 +98,8 @@ button {
 
 #temperature {
   color: #f7768e;
-	/* border-left-style: none; */
-	/* margin-left: -12px; */
+  /* border-left-style: none; */
+  /* margin-left: -12px; */
 }
 
 #window {
@@ -109,25 +109,24 @@ button {
 
 /* If workspaces is the leftmost module, omit left margin */
 .modules-left > widget:first-child > #workspaces {
-    /* margin-left: 8px; */
+  /* margin-left: 8px; */
 }
 
 /* If workspaces is the rightmost module, omit right margin */
 .modules-right > widget:last-child {
-    /* padding-right: 0px; */
-    /* margin-right: 5px; */
+  /* padding-right: 0px; */
+  /* margin-right: 5px; */
 }
 
 .modules-left,
 .modules-center,
-.modules-right
-{
-	border-style: solid;
-	/* border-width: 1px; */
-	/* border-color: rgba(89, 89, 89, .67); */
+.modules-right {
+  border-style: solid;
+  /* border-width: 1px; */
+  /* border-color: rgba(89, 89, 89, .67); */
   border-radius: 6px;
-	margin: 5px 5px 0px 5px;
-  background-color: rgba(0, 0, 0, .8);
+  margin: 5px 5px 0px 5px;
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 #clock {
@@ -139,22 +138,23 @@ button {
 #battery {
 }
 
-#battery.charging, #battery.plugged {
+#battery.charging,
+#battery.plugged {
 }
 
 @keyframes blink {
   to {
     color: #000000;
-    }
+  }
 }
 
 #battery.critical:not(.charging) {
-    color: #ffffff;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+  color: #ffffff;
+  animation-name: blink;
+  animation-duration: 0.5s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
 label:focus {
@@ -182,4 +182,3 @@ label:focus {
 
 #backlight {
 }
-
